[project]
name = "jira-api"
version = "0.1.0"
description = "An elegant way to interact with Jira."
authors = [
    {name = "Sharry",email = "sharry.xu@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
requests = "^2.32.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
